--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,139 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.container-main {
+  width: 1170px;
+  padding: 0;
+  margin: auto;
+}
+
+.container-middle {
+  width: 1050px;
+  margin: auto;
+  padding: 0;
+}
+
+.container-small {
+  width: 980px;
+  margin: auto;
+  padding: 0;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+.bg-orange {
+  background-color: #FF926B;
+}
+
+.bg-purple {
+  background-color: #EB6383;
+}
+
+.bg-green {
+  background-color: #26E7A1;
+}
+
+.bg-yellow {
+  background-color: #FFC38B;
+}
+
+#features {
+  padding: 120px 0px 80px 0px;
+}
+
+#features > h1 {
+  text-align: center;
+  font-size: 38px;
+  font-weight: 700;
+  line-height: none;
+  color: #1F1F33;
+  margin-bottom: 10px;
+}
+
+#features > p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  color: #1F1F33;
+  margin-bottom: 40px;
+}
+
+#features #feature-list {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#features #feature-list .feature-cart {
+  width: calc((100% - 50px)/2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: pink;
+  margin-bottom: 35px;
+  padding: 28px 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  background-color: white;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+#features #feature-list .feature-cart:hover {
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#features #feature-list .feature-cart .f-image {
+  height: 75px;
+  width: 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  margin-right: 26px;
+}
+
+#features #feature-list .feature-cart .f-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+#features #feature-list .feature-cart .f-details > h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: none;
+  color: #1F1F33;
+}
+
+#features #feature-list .feature-cart .f-details .f-desc > h6 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #615F70;
+}
+/*# sourceMappingURL=style.css.map */
