--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,4 @@
-$main-container:1170px;
-$middle-container:1050px;
-$main-container:980px;
+@import "./variables";
+@import "./common";
+@import "./mixins";
+@import "./features";
