--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,137 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.container-main {
+  width: 1170px;
+  padding: 0;
+}
+
+.container-middle {
+  width: 1050px;
+  padding: 0;
+}
+
+.container-small {
+  width: 980px;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.row-footer-t {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.03);
+  padding-bottom: 50px;
+  padding-top: 120px;
+}
+
+.row-footer-m {
+  padding-bottom: 111px;
+  padding-top: 120px;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.03);
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.col-4 {
+  width: calc(100% / 3);
+}
+
+.container-footer {
+  width: 100%;
+  background-color: #001430;
+}
+
+.f-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 38px;
+  color: #ffffff;
+  text-align: right;
+}
+
+.m-title {
+  padding-bottom: 30px;
+  font-size: 24px;
+  color: #ffffff;
+}
+
+.m-sub {
+  font-size: 14px;
+  color: #ffffff;
+  padding-top: 20px;
+}
+
+.m-email {
+  font-size: 16px;
+  opacity: 50%;
+  color: #ffffff;
+  border-bottom: 2px solid #001430;
+  padding-bottom: 10px;
+}
+
+.m-but {
+  padding-left: 35px;
+  color: #ff926b;
+}
+
+.contact h2,
+.enquires h2,
+.follow h2,
+.address h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+  padding-bottom: 20px;
+}
+
+.contact p,
+.enquires p,
+.address p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 36px;
+  color: #ffffff;
+}
+
+.contact,
+.enquires {
+  margin-bottom: 50px;
+}
+
+.p-center {
+  padding-left: 178px;
+}
+
+.follow {
+  border-bottom: 2px solid #001430;
+}
+
+.all-right,
+.all-left {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.all-left {
+  text-align: right;
+}
+
+.all-left span {
+  padding-left: 10px;
+}
