--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,101 @@
-$main-container:1170px;
-$middle-container:1050px;
-$main-container:980px;
+@import "./variables";
+@import "./common";
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+.row-footer-t {
+    border-bottom: 2px solid rgba(255, 255, 255, 0.03);
+    padding-bottom: 50px;
+    padding-top: 120px;
+}
+.row-footer-m {
+    padding-bottom: 111px;
+    padding-top: 120px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.03);
+}
+.col-6 {
+    width: 50%;
+}
+.col-4 {
+    width: calc(100% / 3);
+}
+.container-footer {
+    width: 100%;
+    background-color: #001430;
+}
+.f-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 38px;
+    color: #ffffff;
+    text-align: right;
+}
+.m-title {
+    padding-bottom: 30px;
+    font-size: 24px;
+    color: #ffffff;
+}
+.m-sub {
+    font-size: 14px;
+    color: #ffffff;
+    padding-top: 20px;
+}
+.m-email {
+    font-size: 16px;
+    opacity: 50%;
+    color: #ffffff;
+    border-bottom: 2px solid #001430;
+    padding-bottom: 10px;
+}
+.m-but {
+    padding-left: 35px;
+    color: #ff926b;
+}
+
+.contact h2,
+.enquires h2,
+.follow h2,
+.address h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #ffffff;
+    padding-bottom: 20px;
+}
+.contact p,
+.enquires p,
+.address p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 36px;
+    color: #ffffff;
+}
+.contact,
+.enquires {
+    margin-bottom: 50px;
+}
+.p-center {
+    padding-left: 178px;
+}
+.follow {
+    border-bottom: 2px solid #001430;
+}
+.all-right,
+.all-left {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(255, 255, 255, 0.5);
+}
+.all-left {
+    text-align: right;
+}
+.all-left span {
+    padding-left: 10px;
+}
