--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,71 +20,6 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.container-small {
-  margin: auto;
-}
-
-.container-small > div {
-  display: inline-block;
-  padding-right: 168px;
-  margin-top: 80px;
-  box-sizing: border-box;
-  transition: 0.3s;
-  cursor: pointer;
-}
-
-.container-small > div:hover {
-  transition: 0.1;
-  transform: scale(1.1);
-}
-
-.container-small > div > h1 {
-  font-size: 32px;
-  font-weight: bold;
-  color: #eb6383;
-  margin-top: 17px;
-}
-
-.container-small > div > p {
-  margin-top: 10px;
-}
-
-.container-small > #last {
-  padding-right: 0;
-}
-
-.container-middle > #my-carousel {
-  background: rgba(235, 99, 131, 0.15);
-  border-radius: 10px;
-  margin-top: 120px;
-}
-
-.container-middle > #my-carousel > div {
-  text-align: center;
-}
-
-.container-middle > #my-carousel > div .slider-image {
-  padding-top: 50px;
-  width: 100px;
-  margin: auto;
-  margin-bottom: 40px;
-}
-
-.container-middle > #my-carousel > div p {
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 30px;
-  text-align: center;
-  font-weight: bold;
-  padding: 0 150px 0 150px;
-}
-
-.container-middle > #my-carousel > div span {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  margin-bottom: 45px;
 .bg-orange {
   background-color: #FF926B;
 }
@@ -101,104 +36,100 @@ body {
   background-color: #FFC38B;
 }
 
-#features {
-  padding: 120px 0px 80px 0px;
+#header {
+  background-color: rgba(255, 195, 139, 0.05);
 }
 
-#features > h1 {
-  text-align: center;
-  font-size: 38px;
-  font-weight: 700;
-  line-height: none;
-  color: #1F1F33;
-  margin-bottom: 10px;
+#header .container-main::before {
+  content: "";
+  width: 55%;
+  height: 39%;
+  background-color: #ff926b;
+  display: inline-block;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: -119px;
 }
 
-#features > p {
-  text-align: center;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28px;
-  color: #1F1F33;
-  margin-bottom: 40px;
+#header .container-main {
+  position: relative;
+  margin: 0 auto;
+  padding-top: 40px;
 }
 
-#features #feature-list {
-  width: 100%;
+#header .container-main .menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  margin-bottom: 226px;
 }
 
-#features #feature-list .feature-cart {
-  width: calc((100% - 50px)/2);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: pink;
-  margin-bottom: 35px;
-  padding: 28px 30px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 10px;
-  background-color: white;
-  -webkit-transition: .2s;
-  transition: .2s;
-}
-
-#features #feature-list .feature-cart:hover {
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-#features #feature-list .feature-cart .f-image {
-  height: 75px;
-  width: 75px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 10px;
-  margin-right: 26px;
-}
-
-#features #feature-list .feature-cart .f-details {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-#features #feature-list .feature-cart .f-details > h3 {
-  font-size: 20px;
+#header .container-main .menu .icon span {
+  font-size: 34px;
   font-weight: 700;
-  line-height: none;
-  color: #1F1F33;
+  line-height: 34px;
+  color: #1f1f33;
 }
 
-#features #feature-list .feature-cart .f-details .f-desc > h6 {
-  font-size: 16px;
+#header .container-main .menu nav ul li {
+  display: inline-block;
+  margin: 10px 50px 0 0;
+}
+
+#header .container-main .menu nav ul li a {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 18px;
+  color: #1f1f33;
+}
+
+#header .container-main .menu nav ul li:last-child {
+  margin-right: 0;
+}
+
+#header .container-main .information {
+  position: relative;
+}
+
+#header .container-main .information h1 {
+  font-size: 52px;
+  font-weight: 500;
+  line-height: 64px;
+  color: #1f1f33;
+  margin-bottom: 30px;
+}
+
+#header .container-main .information p {
+  font-size: 20px;
   font-weight: 400;
   line-height: 20px;
-  color: #615F70;
+  color: #1f1f33;
+  margin-bottom: 50px;
 }
-/*# sourceMappingURL=style.css.map */
+
+#header .container-main .information a {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 18px;
+  color: white;
+  background-color: #ff926b;
+  padding: 17px 40px;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#header .container-main .information #downward-arrow {
+  -webkit-transform: translate(-96px, 126px);
+          transform: translate(-96px, 126px);
+}
+
+#header .container-main .information #main-img {
+  position: absolute;
+  top: -179px;
+  right: -119px;
+}
