--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,68 +1,73 @@
 @import "./variables";
 @import "./common";
 @import "./mixins";
-@import "./features";
 
-.container-small {
-    margin: auto;
-    > div {
+#header {
+    background-color: rgba(255, 195, 139, 0.05);
+    .container-main::before {
+        content: "";
+        width: 55%;
+        height: 39%;
+        background-color: #ff926b;
         display: inline-block;
-        padding-right: 168px;
-        margin-top: 80px;
-        box-sizing: border-box;
-        transition: 0.3s;
-        cursor: pointer;
-        &:hover {
-            transition: 0.1;
-            transform: scale(1.10);
-        }
-        > h1 {
-            font-size: 32px;
-            font-weight: bold;
-            color: #eb6383;
-            margin-top: 17px;
-        }
-        > p {
-            margin-top: 10px;
-        }
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        right: -119px;
     }
-    > #last {
-        padding-right: 0;
-    }
-}
-
-
-
-.container-middle {
-    > #my-carousel {
-        background: rgba(235, 99, 131, 0.15);
-        border-radius: 10px;
-        margin-top: 120px;
-        > div {
-            text-align: center;
-            .slider-image {
-                padding-top: 50px;
-                width: 100px;
-                margin: auto;
-                margin-bottom: 40px;
+    .container-main {
+        position: relative;
+        margin: 0 auto;
+        padding-top: 40px;
+        .menu {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 226px;
+            .icon {
+                span {
+                    @include text-style(34px, 700, 34px, #1f1f33);
+                }
+            }
+            nav {
+                ul {
+                    li {
+                        display: inline-block;
+                        margin: 10px 50px 0 0;
+                        a {
+                            @include text-style(18px, 500, 18px, #1f1f33);
+                        }
+                    }
+                    li:last-child {
+                        margin-right: 0;
+                    }
+                }
+            }
+        }
+        .information {
+            position: relative;
+            h1 {
+                @include text-style(52px, 500, 64px, #1f1f33);
+                margin-bottom: 30px;
             }
             p {
-                font-weight: bold;
-                font-size: 21px;
-                line-height: 30px;
-                text-align: center;
-                font-weight: bold;
-                padding: 0 150px 0 150px;
+                @include text-style(20px, 400, 20px, #1f1f33);
+                margin-bottom: 50px;
             }
-            span {
-                font-weight: 500;
-                font-size: 18px;
-                line-height: 22px;
-                text-align: center;
-                margin-bottom: 45px;
+            a {
+                @include text-style(18px, 500, 18px, white);
+                background-color: #ff926b;
+                padding: 17px 40px;
+                border-radius: 5px;
+                box-sizing: border-box;
+            }
+            #downward-arrow {
+                transform: translate(-96px, 126px);
+            }
+            #main-img {
+                position: absolute;
+                top: -179px;
+                right: -119px;
             }
         }
     }
 }
-
-
